# advent_of_code

./: .gitignore  LICENSE  pyproject.toml
advent_of_code/aoc_2024/: get_distance.py  parse_location_ids.py
advent_of_code/aoc_2024/input/: numbers.txt
advent_of_code/aoc_2024/tests/: test_get_distance.py  test_parse_location_ids.py
advent_of_code/aoc_2024/tests/test_get_distance/: missing_value_left.txt  missing_value_right.txt  values_int_str.txt
