[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Avent of code events"
authors = ["ellendejong <de.jong.ellen@hotmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.scripts]
get_distance = "advent_of_code.aoc_2024.get_distance:main"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
argparse = "^1.4.0"
pytest-datadir = "^1.5.0"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
